# piper_moveit_rbnx

./: .gitignore  README.md  package_manifest.yaml
capabilities/lib/manipulation/srv/: Demo.srv  DemoPlace.srv  ExecuteGrasp.srv  Reset.srv
capabilities/service/manipulation/: demo.v1.toml  demo_place.v1.toml  driver.v1.toml  execute_grasp.v1.toml  reset.v1.toml
launch/: piper_moveit_rbnx.launch.py
piper_moveit/: main.py
scripts/: build.sh  dev_source.sh  run_full_demo.sh  start.sh
src/piper_moveit/piper_with_gripper_moveit/: package.xml
src/piper_moveit/piper_with_gripper_moveit/config/: moveit.rviz  sensors_3d.yaml
src/piper_moveit/piper_with_gripper_moveit/launch/: piper_moveit.launch.py  rsp.launch.py
src/piper_moveit_control/: CMakeLists.txt  README.md  package.xml
src/piper_moveit_control/launch/: moveit_control.launch.py  test_control.launch.py
src/piper_moveit_control/src/: moveit_control_node.cpp  moveit_control_node_yolo.cpp  test_control_node.cpp
